@@ -6,7 +6,7 @@ cat > testlist.py << EOF
 from UML import *
 
 testlist = [
-`cat ../gaphor/UML/UML_MetaModel.py | grep '^class' | grep -v 'Enumeration_' | sed 's/class \([a-zA-Z_0-9]*\).*/    \1,/g'`
+`cat ../gaphor/UML/ModelElements.py | grep '^class' | grep -v 'Enumeration_' | sed 's/class \([a-zA-Z_0-9]*\).*/    \1,/g'`
 ]
 EOF
 
